# mce

./: .gitignore  .gitmodules  CMakeLists.txt  MaxCMakeModules.cmake  MaxMinAPI.cmake  README.md  package-info.json
code/: onepole.gendsp
help/: mce.onepole~.maxhelp
patchers/: mce.maxpat
source/: mce.onepole_tilde.cpp  mce.onepole_tilde.hpp
source/dsp/: onepole.dsp.hpp
source/projects/mce.onepole_tilde/: CMakeLists.txt  mce.onepole_tilde.hpp
